<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/back"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_email_black_24dp"
            android:background=""/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="310dp"
            android:layout_marginBottom="50dp"
            android:background=""
            android:text="@string/Help"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="155dp"
            android:layout_height="100dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/cam" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:entries="@array/countries"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="50sp">


        </TextView>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/add"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="86dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:text="@string/Register"
                    android:textSize="20sp" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/login"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/add"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:text="@string/transfer"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/phone"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:text="@string/device"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/add"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="183dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:text="@string/payment"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/personadd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:text="@string/account"
                android:textSize="20sp" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_description_black_24dp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="126dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:text="@string/loans"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/internet"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:text="@string/internet"
                android:textSize="20sp" />

        </LinearLayout>
</LinearLayout>-